--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,10 +17,6 @@
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28" />
-
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -29,6 +28,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BDApps"
         tools:targetApi="31">
+        <activity
+            android:name=".ProfileComponent.Timer.TimerActivity"
+            android:exported="false" />
         <activity
             android:name=".ChatDetailActivity"
             android:exported="false" />
@@ -53,7 +55,7 @@
             android:name=".CreateGroup"
             android:exported="false" />
         <activity
-            android:name=".ProfilePage"
+            android:name=".ProfileComponent.ProfilePage"
             android:exported="false" />
         <activity
             android:name=".ProfileView"
