--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,15 @@
         android:theme="@style/Theme.BDApps"
         tools:targetApi="31">
         <activity
+            android:name=".Recommendation.Recommendation"
+            android:exported="false" />
+        <activity
+            android:name=".SearchPost.SearchActivityPost"
+            android:exported="false" />
+        <activity
+            android:name=".SearchPost.PostDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".ChatDetailActivity"
             android:exported="false" />
         <activity
