Added live users

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,10 +29,10 @@
         android:theme="@style/Theme.BDApps"
         tools:targetApi="31">
         <activity
-
-            android:name=".ProfileComponent.Timer.TimerActivity"/>
-
-      <activity
+            android:name=".OnlineUsersActivity"
+            android:exported="false" />
+        <activity android:name=".ProfileComponent.Timer.TimerActivity" />
+        <activity
             android:name=".Recommendation.Recommendation"
             android:exported="false" />
         <activity
@@ -40,7 +40,6 @@
             android:exported="false" />
         <activity
             android:name=".SearchPost.PostDetailActivity"
-
             android:exported="false" />
         <activity
             android:name=".ChatDetailActivity"
